# server-py

./: .gitignore  Makefile  flake.nix  pyproject.toml
pkgs/: shell.nix
src/server_py/: __init__.py  app.py
src/tests/: test_smoke.py
