[project]
name = "server-py"
version = "0.1.0"
description = "Template Python project with Nix, uv, basedpyright, and bake"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = []

[project.scripts]
server-py = "server_py.app:main"
server-py-train = "server_py.bin.train:main"
server-py-serve = "server_py.bin.serve:main"
server-py-eval = "server_py.bin.eval:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["basedpyright>=1.31.0", "ruff>=0.11.0", "pytest>=8.4.0"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.basedpyright]
include = ["src"]
exclude = [".venv", "**/__pycache__"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.hatch.build.targets.wheel]
packages = ["src/server_py"]
