[project]
name = "server-py"
version = "0.0.0"
requires-python = ">=3.14,<3.15"

[project.scripts]
server-py = "server_py.app:main"
server-py-train = "server_py.bin.train:main"
server-py-serve = "server_py.bin.serve:main"
server-py-eval = "server_py.bin.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["basedpyright", "ruff", "pytest"]

[tool.basedpyright]
typeCheckingMode = "all"
